Added database layer, initially, accessing to token table. Tests added too

--- a/etc/config.conf
+++ b/etc/config.conf
@@ -30,3 +30,30 @@ host = 0.0.0.0
 
 # Port to listen
 port = 80
+
+[DATABASE]
+# Driver name for database interface.
+# Options available:
+# - postgresql
+# Default: postgresql
+db_driver = postgresql
+
+# Database host
+# Default: 0.0.0.0
+db_host = 0.0.0.0
+
+# Database port
+# Default: 5432
+db_port = 5432
+
+# Database name
+# Default: cheetah-api
+db_name = cheetah-api
+
+# Database username
+# Default: cheetah-api
+db_username = cheetah-api
+
+# Database user password
+# Default: 1234
+db_pwd = 1234
