Defined authentication API and full workflow. Fix bugs. Tests working. Authentication working

--- a/etc/config.conf
+++ b/etc/config.conf
@@ -26,7 +26,7 @@ log_level = INFO
 log_format = %(asctime)s %(thread)s %(levelname)s %(module)s [-] %(message)s
 
 # Hostname of the server
-host = 0.0.0.0
+host = localhost
 
 # Port to listen
 port = 80
@@ -39,8 +39,8 @@ port = 80
 db_driver = postgresql
 
 # Database host
-# Default: 0.0.0.0
-db_host = 0.0.0.0
+# Default: localhost
+db_host = localhost
 
 # Database port
 # Default: 5432
@@ -55,5 +55,5 @@ db_name = cheetah-api
 db_username = cheetah-api
 
 # Database user password
-# Default: 1234
-db_pwd = 1234
+# Default: cheetah-api
+db_pwd = cheetah-api
