--- a/etc/config.conf
+++ b/etc/config.conf
@@ -26,9 +26,11 @@ log_level = INFO
 log_format = %(asctime)s %(thread)s %(levelname)s %(module)s [-] %(message)s
 
 # Hostname of the server
-host = localhost
+# Default: 0.0.0.0
+host = 0.0.0.0
 
 # Port to listen
+# Default: 80
 port = 80
 
 [DATABASE]
@@ -39,8 +41,8 @@ port = 80
 db_driver = postgresql
 
 # Database host
-# Default: localhost
-db_host = localhost
+# Default: 0.0.0.0
+db_host = 0.0.0.0
 
 # Database port
 # Default: 5432
@@ -48,12 +50,12 @@ db_port = 5432
 
 # Database name
 # Default: cheetah-api
-db_name = cheetah-api
+db_name = docker
 
 # Database username
 # Default: cheetah-api
-db_username = cheetah-api
+db_username = docker
 
 # Database user password
 # Default: cheetah-api
-db_pwd = cheetah-api
+db_pwd = docker
